git-annex (0.20110321) UNRELEASED; urgency=low

  * Free space checking is now done, for transfers of data for keys
    that have free space metadata. (Notably, not for SHA* keys generated
    with git-annex 0.24 or earlier.) The code is believed to work on
    Linux, FreeBSD, and OSX; check compile-time messages to see if it
    is not enabled for your OS.

 -- Joey Hess <joeyh@debian.org>  Tue, 22 Mar 2011 16:52:00 -0400

git-annex (0.20110320) experimental; urgency=low

  * Fix dropping of files using the URL backend.
  * Fix support for remotes with '.' in their names.
  * Add version command to show git-annex version as well as repository
    version information.
  * No longer auto-upgrade to repository format 2, to avoid accidental
    upgrades, etc. Use git-annex upgrade when you're ready to run this
    version.

 -- Joey Hess <joeyh@debian.org>  Sun, 20 Mar 2011 16:36:33 -0400

git-annex (0.20110316) experimental; urgency=low

  * New repository format, annex.version=2.
  * The first time git-annex is run in an old format repository, it
    will automatically upgrade it to the new format, staging all
    necessary changes to git. Also added a "git annex upgrade" command.
  * Colons are now avoided in filenames, so bare clones of git repos
    can be put on USB thumb drives formatted with vFAT or similar
    filesystems.
  * Added two levels of hashing to object directory and .git-annex logs,
    to improve scalability with enormous numbers of annexed
    objects. (With one hundred million annexed objects, each
    directory would contain fewer than 1024 files.)
  * The setkey, fromkey, and dropkey subcommands have changed how
    the key is specified. --backend is no longer used with these.

 -- Joey Hess <joeyh@debian.org>  Wed, 16 Mar 2011 16:20:23 -0400

git-annex (0.24) unstable; urgency=low

  Branched the 0.24 series, which will be maintained for a while to
  support v1 git-annex repos, while main development moves to the 0.2011